--- a/less/mixins.less
+++ b/less/mixins.less
@@ -25,7 +25,7 @@
     border: 0px;
     font-size: 2rem;
     padding: 10px;
-    width: 250px;
+    width: 100%;
     border-radius: 8px;
     background: @bgcolor;
     color: white;
@@ -36,6 +36,12 @@
     &:hover {
         cursor: pointer;
         background: @hovercolor;
+    }
+
+    @media @tablet{
+      width: 50%;
+    }
+    @media @phone{
     }
   }
 }
